# termux-fix-shebang

./: Makefile.am  README.md  configure.ac  fix-shebang.c
tests/: Makefile.am  fix-shebang.at
tests/shebang/: with_hyphen.sh  with_plus.sh  with_relative_path.sh  with_script.sh  with_underscore.sh
